liked by finished

--- a/lineman/app/templates/discussion_items/new_comment.haml
+++ b/lineman/app/templates/discussion_items/new_comment.haml
@@ -16,4 +16,4 @@
       %abbr.timeago>
         {{comment.createdAt | timeFromNowInWords}}
     .thread-liked-by-sentence{ng_show: 'anybodyLikesIt()'}
-      {{ likedBySentence() }}
+      {{ likedBySentence }}
