--- a/lineman/app/templates/add_comment.haml
+++ b/lineman/app/templates/add_comment.haml
@@ -3,6 +3,7 @@
     .card-left
       %img{src: 'http://placehold.it/40x40'}
     .card-right 
+      {{ hithere }}
       %form{name: 'addCommentForm', ng_submit: 'processForm()'}
         .card-row.fake
           %input.form-control{placeholder: "Write a comment...", ng_focus: "expand()", id: 'fake_comment_input'}
