--- a/lineman/app/css/base.scss
+++ b/lineman/app/css/base.scss
@@ -8,3 +8,11 @@ body {
 .time-ago {
   border: 0;
 }
+
+h1 {
+  @include fontHelveticaBold;
+  @include fontGrande;
+  padding: 0;
+  margin: 0;
+  color: #333333;
+}
