--- a/lineman/app/templates/start_proposal.haml
+++ b/lineman/app/templates/start_proposal.haml
@@ -1,43 +1,4 @@
-.card-row#create-a-proposal{ng_hide: 'isHidden'}
-  .card.cover
-    .card-left
-      .card-pie-graph-icon
-    .card-right.card-right-text
-      .card-header 
-        %h3.no-header-styles Ready to make a decision?
-      .card-content
-        %a.cuke-show-new-proposal-form-btn{href: '#', ng_click: 'showForm()'}
-          Create a proposal
-  .card.form
-    .card-header
-      %h3 Start a proposal
-
-    .card-content
-      .errors{ng_hide: 'errorMessages.length == 0'}
-        Oh no there were some errors:
-        .error{ng_repeat: 'error in errorMessages'}
-          {{error}}
-
-      %form{ng_submit: 'submitProposal()'}
-        %fieldset{ng_disabled: 'isDisabled'}
-          .form-group
-            %label{for: 'proposal-title-field'} Title
-            %input#proposal-title-field.form-control{placeholder: 'Eg: Let\'s go to the moon', ng_model: 'proposal.name', ng_required: 'true'}
-
-          .form-group
-            %label{for: 'proposal-close-date-field'} Closes at
-            .datetimeselect
-              %input.form-control{ng_model: 'proposal.closing_at', ng_focus: 'openDatetimepicker()', ng_required: 'true'}
-              %i.fa.fa-calendar{ng_click: 'toggleDatetimepicker()'}
-
-              %datetimepicker{ng_model: 'proposal.closing_at', datetimepicker_config: "{ startView:'day', minView:'hour'}", on_set_time: 'closeDatetimepicker', ng_show: 'showDatetimepicker'}
-
-          .form-group
-            %label{for: 'proposal-description-field'} Details
-            %textarea#proposal-description-field.form-control{ng_model: 'proposal.description', placeholder: 'Give enough detail so everyone knows exactly what it means to agree or disagree'}
-
-          .form-group
-            %button.btn.btn-primary.cuke-submit-proposal-btn{type: 'submit'}
-              Submit
-            %button.btn{ng_click: 'closeForm()', value: 'Cancel'}
-              Cancel
+.thread-start-proposal-card
+  %h3 Ready to make a decision?
+  %a{href: '#', ng_click: 'openForm()'}
+    Create a proposal
