--- a/lineman/app/templates/discussion.haml
+++ b/lineman/app/templates/discussion.haml
@@ -36,5 +36,6 @@
         .thread-events
           %div{ng_repeat: 'event in discussion.events()', ng_include: "safeEvent(event.kind) && 'generated/templates/discussion_items/'+ event.kind + '.html'"}
 
-        %start_proposal{discussion: 'discussion'}
+        .start-proposal{ng_hide: 'discussion.activeProposalId'}
+          %start_proposal{discussion: 'discussion'}
         %add_comment{discussion: 'discussion'}
