--- a/lineman/app/templates/discussion.haml
+++ b/lineman/app/templates/discussion.haml
@@ -20,8 +20,7 @@
             ·
             %a{href: '#', translate: 'common.action.edit'}>
             ·
-            %span.time-ago>
-              {{discussion.createdAt | timeFromNowInWords}}
+            %timeago{timestamp: 'discussion.createdAt' }>
             ·
             %span.discussion-privacy__is-private{ng-show: 'discussion.private'}>
               %i.fa.fa-lock>
