--- a/lineman/app/templates/discussion_items/new_comment.haml
+++ b/lineman/app/templates/discussion_items/new_comment.haml
@@ -8,7 +8,8 @@
   .thread-attachments
     .thread-attachment{ng-repeat: 'attachment in comment.attachments()'}
       %a{ng-href: '{{attachment.location}}', target: '_blank'} 
-        {{ attachment.filename }}
+        {{ attachment.filename }} 
+      ({{attachment.filesize | fileSize}})
 
   .thread-event-footer
     .thread-actions-and-meta
