--- a/lineman/app/templates/discussion.haml
+++ b/lineman/app/templates/discussion.haml
@@ -37,7 +37,7 @@
 
         %add_comment{discussion: 'discussion'}
 
-      .thread-start-proposal-card{ng_controller: 'StartProposalCardController', ng-show: 'discussion.noActiveProposal()'}
+      .thread-start-proposal-card{ng_controller: 'StartProposalCardController', ng-show: '!discussion.activeProposal()'}
         %h3 Ready to make a decision?
         %a{href: '#', ng_click: 'openForm()'}
           Create a proposal
