--- a/lineman/app/templates/proposal_form.haml
+++ b/lineman/app/templates/proposal_form.haml
@@ -11,19 +11,18 @@
           %input#proposal-title-field.form-control{placeholder: "{{ 'proposal_form.title_placeholder' | translate }}", ng-model: 'proposal.name', ng-required: 'true'}
 
         .form-group
-          %label{for: 'proposal-close-date-field', translate: 'proposal_form.closes_at_label'}
-          .datetimeselect
-            %input.form-control{ng-model: 'proposal.closingAt', ng-focus: 'showClosingAtPicker()', ng-required: 'true'}
-            %i.fa.fa-calendar{ng-click: 'toggleClosingAtPicker()'}
-
-            %datetimepicker{ng-model: 'proposal.closingAt', datetimepicker_config: "{ startView:'day', minView:'hour'}", on-set-time: 'hideClosingAtPicker()', ng-show: 'closingAtPickerIsActive'}
-
-        .form-group
           %label{for: 'proposal-details-field', translate: 'proposal_form.details_label'}
           %textarea#proposal-details-field.form-control{ng-model: 'proposal.description', placeholder: "{{ 'proposal_form.details_placeholder' | translate }}"}
 
+        .form-group{dropdown: '', is-open: 'dropdownIsOpen'}
+          .input-group.dropdown-toggle
+            -#%label{for: 'proposal-close-date-field', translate: 'proposal_form.closes_at_label'}
+            %input.form-control{ng-model: 'proposal.closingAt', ng-required: 'true'}
+            %span.input-group-addon
+              %i.fa.fa-calendar
+          .dropdown-menu{role: 'menu'}
+            %datetimepicker{ng-model: 'proposal.closingAt', data-datetimepicker-config: "{ startView:'day', minView:'hour'}", on-set-time: 'onSetTime()'}
+
   .modal-footer
-    %button.btn.btn-primary{type: 'submit'}
-      Submit
-    %button.btn.btn-warning{ng-click: 'closeForm()', value: 'Cancel'}
-      Cancel
+    %button.btn.btn-primary{type: 'submit', translate: 'proposal_form.start_proposal'}
+    %button.btn.btn-warning{ng-click: 'cancel()', translate: 'common.action.cancel'}
