--- a/lineman/app/templates/add_attachment.haml
+++ b/lineman/app/templates/add_attachment.haml
@@ -1,8 +1,9 @@
 .attachments
-  .attachments-add
+  .attachments-add{ng_hide: 'isAttaching'}
     %input{type: 'file', ng_file_select: 'upload($files)'}
   .attachment-in-progress{ng_show: 'isAttaching'}
-    .attachment-filename {{ newAttachment.filename }}
+    .attachment-filename {{ uploadingFilename }}
     .progress.active
-      .progress-bar
+      %progress-bar.progress-striped.active{ng_attr_value: 'percentComplete'}
+        {{ percentComplete }} %
     %button.close.cancel-upload{ng_click: 'abort()'} &times;
