--- a/lineman/app/templates/add_attachment.haml
+++ b/lineman/app/templates/add_attachment.haml
@@ -1,4 +1,6 @@
 .attachments
+  .attachments-current
+    Attachment Ids: {{ comment.attachmentIds }}
   .attachments-add{ng_hide: 'isAttaching'}
     %input{type: 'file', ng_file_select: 'upload($files)'}
   .attachment-in-progress{ng_show: 'isAttaching'}
