--- a/lineman/app/templates/proposal_form.haml
+++ b/lineman/app/templates/proposal_form.haml
@@ -25,4 +25,4 @@
 
   .modal-footer
     %button.btn.btn-primary{type: 'submit', translate: 'proposal_form.start_proposal'}
-    %button.btn.btn-warning{ng-click: 'cancel()', translate: 'common.action.cancel'}
+    %button.btn.btn-warning{ng-click: 'cancel($event)', translate: 'common.action.cancel'}
