--- a/lineman/app/templates/discussion_items/new_vote.haml
+++ b/lineman/app/templates/discussion_items/new_vote.haml
@@ -1,7 +1,8 @@
--#%span{translate: "new_vote_item.user_agreed", translate_values: '{name: vote.author_name()}'}
 .thread-event.thread-vote{ng-controller: 'NewVoteItemController'}
   .thread-event-header.media
-    .pull-left.vote-icon{class: 'vote-icon-{{vote.position}}'}
+    .pull-left.thread-event-vote-icon{class: 'thread-event-vote-icon-{{vote.position}}'}
+    .media-body
+      %span{translate: "new_vote_item.{{vote.positionVerb()}}_on_proposal", translate-value-name: '{{vote.authorName()}}'}
     .thread-vote-author-action{ng-show: 'vote.isYes()', translate: 'new_vote_item.user_agreed', translate-value-name: '{{vote.authorName()}}'}
     .thread-vote-author-action{ng-show: 'vote.isNo()', translate: 'new_vote_item.user_disagreed', translate-value-name: '{{vote.authorName()}}'}
     .thread-vote-author-action{ng-show: 'vote.isAbstain()', translate: 'new_vote_item.user_abstained', translate-value-name: '{{vote.authorName()}}'}
