--- a/lineman/app/templates/proposal_form.haml
+++ b/lineman/app/templates/proposal_form.haml
@@ -16,7 +16,7 @@
 
       .form-group{dropdown: '', is-open: 'dropdownIsOpen'}
         .input-group.dropdown-toggle
-          -#%label{for: 'proposal-close-date-field', translate: 'proposal_form.closes_at_label'}
+          %label{for: 'proposal-close-date-field', translate: 'proposal_form.closes_at_label'}
           %input.form-control{ng-model: 'proposal.closingAt', ng-required: 'true'}
           %span.input-group-addon
             %i.fa.fa-calendar
