--- a/lineman/app/css/proposal_card.scss
+++ b/lineman/app/css/proposal_card.scss
@@ -17,24 +17,46 @@
 
 }
 
-.proposal-card-vote-btn {
+.proposal-card-vote-button {
   display: inline-block;
   width: 60px;
   height: 60px;
 }
 
-.proposal-card-vote-yes-btn {
+.proposal-card-vote-button-yes{
   background-image: url(/img/green_thumb_button_60.png);
 }
 
-.proposal-card-vote-no-btn {
+.proposal-card-vote-button-no {
   background-image: url(/img/pink_thumb_button_60.png);
 }
 
-.proposal-card-vote-abstain-btn {
+.proposal-card-vote-button-abstain {
   background-image: url(/img/yellow_thumb_button_60.png);
 }
 
-.proposal-card-vote-block-btn {
+.proposal-card-vote-button-block {
   background-image: url(/img/red_flag_button_60.png);
+}
+
+.proposal-card-your-position-icon {
+  display: inline-block;
+  width: 60px;
+  height: 60px;
+}
+
+.proposal-card-your-position-icon-yes {
+  background-image: url(/img/green_thumb_icon_60.png);
+}
+
+.proposal-card-your-position-icon-no {
+  background-image: url(/img/pink_thumb_icon_60.png);
+}
+
+.proposal-card-your-position-icon-abstain {
+  background-image: url(/img/yellow_thumb_icon_60.png);
+}
+
+.proposal-card-your-position-icon-block {
+  background-image: url(/img/red_flag_icon_60.png);
 }
