--- a/lineman/app/templates/add_comment.haml
+++ b/lineman/app/templates/add_comment.haml
@@ -1,18 +1,19 @@
-.add-comment
+.add-comment.media
   .pull-left
     %img{src: 'http://placehold.it/40x40'}
-  %form{name: 'addCommentForm', ng_submit: 'processForm()'}
-    .card-row.fake
-      %input.form-control{placeholder: "Write a comment...", ng_focus: "expand()", id: 'fake_comment_input'}
-    .card-row.real
-      .left
-        %textarea#comment-field.form-control{name: 'body', rows: 5, placeholder: "Say something...", ng_blur: "collapseIfEmpty()", ng_model: 'newComment.body'}
-      .right
-        %button#post-comment-btn.btn.btn-default.btn-block.submit{type: 'submit'} Post
+  .media-body
+    %form{name: 'addCommentForm', ng_submit: 'submit()'}
+      .card-row.fake
+        %input.form-control{placeholder: "Write a comment...", ng_focus: "expand()", id: 'fake_comment_input'}
+      .card-row.real
+        .left
+          %textarea#comment-field.form-control{name: 'body', rows: 5, placeholder: "Say something...", ng_blur: "collapseIfEmpty()", ng_model: 'comment.body'}
+        .right
+          %button#post-comment-btn.btn.btn-default.btn-block.submit{type: 'submit'} Post
 
-    .comment-row.comment-attachments{ng_repeat: 'attachment in newComment.attachments'}
-      %a.attachment-link{ng_href: '{{attachment.location}}', target: '_blank'}
-        {{ attachment.filename }}
-      %span.attachment-filesize  
-        ({{ attachment.filesize | fileSize }})
-    %add_attachment{comment: 'newComment'}
+      -#.comment-row.comment-attachments{ng_repeat: 'attachment in comment.attachments()'}
+        -#%a.attachment-link{ng_href: '{{attachment.location}}', target: '_blank'}
+          -#{{ attachment.filename }}
+        -#%span.attachment-filesize
+          -#({{ attachment.filesize | fileSize }})
+      -#%add_attachment{comment: 'comment'}
