--- a/lineman/app/templates/discussion_items/new_comment.haml
+++ b/lineman/app/templates/discussion_items/new_comment.haml
@@ -1,8 +1,11 @@
 .thread-event.thread-comment{ng_controller: 'NewCommentItemController'}
+
   .thread-event-header.media
     .pull-left{ng-include: "'generated/templates/user/avatar.html'", ng-init: 'user = comment.author()'}
     .media-body
-      %strong {{comment.authorName()}}
+      %span{ng-show: 'comment.parentId', translate: 'new_comment_item.in_reply_to', translate-values: '{author: comment.authorName(), recipient: comment.parentAuthorName()}'}
+      %span{ng-hide: 'comment.parentId'}
+        %strong {{comment.authorName()}}
   .thread-event-body{btf-markdown: 'comment.body' }
 
   .thread-attachments
