--- a/lineman/app/templates/vote_form.haml
+++ b/lineman/app/templates/vote_form.haml
@@ -7,11 +7,13 @@
       .position-button.position-button-no{ng-click: 'selectPosition("no")'}
       .position-button.position-button-block{ng-click: 'selectPosition("block")'}
 
-    %form{ng-submit: 'submit()', ng-show: 'newVote.position' }
+    %form{ng-submit: 'submit()', ng-show: 'newVote.position || editing' }
       %fieldset
         .form-group
           %label{for: 'vote-statement-field'}
-            {{ 'vote_form.i_'+ newVote.positionVerb() | translate }}
+            %span{ng-show: 'newVote.position'}
+              {{ 'vote_form.i_'+ newVote.positionVerb() | translate }}
+            %span{translate: 'vote_form.select_position', ng-show: '!newVote.position'}
           %textarea#vote-statement-field.form-control{ng-model: 'newVote.statement', placeholder: '{{ "vote_form.statement_placeholder" | translate }}'}
 
       %button.btn.btn-primary{type: 'submit', translate: 'vote_form.submit_position'}
@@ -21,7 +23,7 @@
     %h3{translate: 'proposal_card.your_position'}
 
     %a.change-position.pull-right{ng-click: 'changePosition()', href: '#'}
-      %span{translate: 'vote_form.change_position'}
+      %span{translate: 'common.action.edit'}
       %i.fa.fa-pencil
 
     .current-position.media
